# data-engineering-take-home

./: .gitignore  ANSWERS.md  ASSIGNMENT.md  ERD_updated.dot  HOWTOREAD.md  README.md  REDESIGN.md  analyze.py  daily_usage_mb.csv  pyproject.toml  redesign.sql  requirements.txt  telecom_usage_analysis.ipynb  telecom_usage_analysis.py
outputs/: linked_usage_events.csv
utils/: __init__.py  analysis_helpers.py  dataframe_cleaner.py  table_cleaning.py
