[project]
name = "data-engineering-take-home"
version = "0.1.0"
description = "Local analysis environment for the Hologram data engineering take-home."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "polars",
    "pyarrow",
]

[tool.uv]
package = false
